--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/stevo.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style_updated.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -166,12 +166,12 @@ document.getElementById("sidebar").style.width = "0";
             {%  for item in models %}
                   <!-- <a href="#">{{item.name}}</a> -->
                <a href="#menu{{item.id}}" class=" collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><span class="hidden-sm-down">{{item.name}}</span> </a>
-                    <div class="collapse p-3" id="menu{{item.id}}">
+                    <div class="collapse" id="menu{{item.id}}" style="margin-left:33px">
                        {%  for items in item.cats %}
-                         <a href="#menu1sub{{items.id}}"  style="background-color:pink" data-toggle="collapse" aria-expanded="false"> {{ items.name}}</a>
-                                   <div class="collapse" id="menu1sub{{items.id}}">
+                         <a href="#menu1sub{{items.id}}"  data-toggle="collapse" aria-expanded="false"> {{ items.name}}</a>
+                                   <div class="collapse" id="menu1sub{{items.id}}" style="margin-left:33px" >
                                         {%  for item_new in items.category.all %}
-                                                 <a href="{%url 'model'%}?model={{ item_new.name }}"class="list-group-item" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
+                                                 <a href="{%url 'model'%}?model={{ item_new.name }}" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
                                         {%endfor%}
                                <!-- <div class="collapse"> -->
                          </div>
