--- a/templates/indview.html
+++ b/templates/indview.html
@@ -29,7 +29,7 @@
 
   <!-- Bootstrap CSS File -->
   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/pptxjs.css' %}"> -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification02.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -101,117 +101,70 @@
               debugger;
 
 
-              var frm = $('#d');
-         frm.submit(function () {
-             $.ajax({
-                 type: frm.attr('method'),
-                 url: frm.attr('action'),
-                 data: frm.serialize(),
-                 success: function (data) {
-                     $("#SOME-DIV").html(data);
-                 },
-                 error: function(data) {
-                     $("#MESSAGE-DIV").html("Something went wrong!");
-                 }
-             });
-             return false;
-         });
+
 
            $("#Submit").click(function(){
 
 
                var table = document.querySelector('table'),
                    rows = table.getElementsByTagName('tr'),
-                    i, j, cells, customerId,obj={}, myMap = new Map();
-
-                     for (i = 0, j = rows.length; i < j; ++i) {
-                           cells = rows[i].getElementsByTagName('td');
-
-                       if (!cells.length) {
-                        continue;
+                      i, j, cells, customerId,obj={}, myMap = new Map();
+                    for (i = 0, j = rows.length; i < j; ++i) {
+                        cells = rows[i].getElementsByTagName('td');
+                        if (!cells.length) {
+                            continue;
                          }
 
                           name = cells[0].innerHTML? cells[0].innerHTML.trim():"";
-            // value= cells[1] ? parseInt(cells[1].innerHTML.trim()) : "";
-                      value = cells[1].innerHTML.trim();
-                        myMap.set(name, value);
-                   }
+                          value = cells[1].innerHTML ? cells[1].innerHTML.trim() : "";
+                          myMap.set(name, value);
+                      }
 
                          function mapToObj(map){
-                              var obj = {}
-                           map.forEach(function(v, k){
-                           obj[k] = v
+                             var obj = {}
+                             map.forEach(function(v, k){
+                               obj[k] = v
                             })
-                        return obj
-                       }
-                                     var myJson = {};
-                                      myJson= mapToObj(myMap);
+                          return obj
+                         }
 
-                                       myJson=JSON.stringify(myJson)
-                                       // var obj=JSON.parse(myJson)
-                                       // var data = obj["text"]
-                                     var res = document.getElementById('result');
+                            var myJson = {};
+                            myJson= mapToObj(myMap);
+
+                            myJson=JSON.stringify(myJson)
+                            var res = document.getElementById('result');
                                       debugger;
 
-           // debugger;
-           //      var $table = $("table")
-           //      rows = [],
-           //      header = [];
-           //      $table.find("thead th").each(function () {
-           //      // if($.trim($(this).text())!="")
-           //          header.push($.trim($(this).text()));
-           //      });
-           //      $table.find("tbody tr").each(function (j) {
-           //          var row = {};
-           //      $(this).find("td").each(function (i) {
-           //          var key = $.trim(header[i]),
-           //          value = $.trim($(this).text());
-           //          row[key] = value;
-           //          });
-           //      rows.push(row);
-           //    });
-           //
-           //  myMap = new Map();
-           //
-           //    for(var i=0;i<rows.length;i++)
-           //      {
-           //          myMap.set(rows[i])
-           //          }
-           //
-           //  function mapToObj(map){
-           //      var obj = {}
-           //      map.forEach(function(v, k){
-           //      obj[k] = v
-           //    })
-           //      return obj
-           //    }
-           //
-           // myJson= mapToObj(myMap);
-           //
-           //  myJson=JSON.stringify(myJson)
-           //  var obj=JSON.parse(myJson)
-           //    myJson= mapToObj(rows);
-           //      debugger;
-           //    myJson = JSON.stringify(myJson);
-           //
-           //  $.ajax({
-           //        url: '{% url 'get_response' %}',
-           //
-           //        data: {
-           //          'inputValue': myJson,
-           //          'csrfmiddlewaretoken': '{{ csrf_token }}',
-           //        },
-           //        dataType: 'json',
-           //        success: function (data) {
-           //          debugger;
-           //          // document.getElementById('p-text').innerHTML = data["respond"];
-           //        }
-           //      });
+
+
 
 
                 $.post('{{ model.endpoint }}',myJson).done(function(data){
                     debugger;
-                    res.innerHTML = data;
+                        var tbody = document.getElementById("matchData");
+                        var headerNames = Object.getOwnPropertyNames(data[0]);
+                        var columnCount = headerNames.length;
+//Add the header row.
+                        var row = tbody.insertRow(-1);
+                        for (var i = 0; i < columnCount; i++) {
+                             var headerCell = document.createElement("TH");
+                             headerCell.innerHTML = headerNames[i];
+                            row.appendChild(headerCell);
+                        }
+// loop through data source
+                        for (var i = 0; i < data.length; i++) {
+                        var tr = document.createElement("tr");
+                        for(var colName in data[i]) {
+                           var td = document.createElement("td");
+                           td.innerHTML = data[i][colName];
+                           if(colName=="Location")
+                               td.className = "centered";
+                           tr.appendChild(td);
+                        }
+                        tbody.appendChild(tr);
+                        }
+
+                      // res.innerHTML = data;
                })
 
               });
@@ -219,7 +172,7 @@
 
 
 
-               $('.dataframe').on('click',"td",function(e){
+               $('#table_data').on('click',"td",function(e){
                   debugger;
                   var OriginalContent = $(this).text();
                   $(this).addClass("cellEditing");
@@ -359,12 +312,12 @@
                                {%  for item in mlist %}
                                      <!-- <a href="#">{{item.name}}</a> -->
                                   <a href="#menu{{item.id}}" class=" collapsed" data-toggle="collapse" data-parent="#sidebar" aria-expanded="false"><span class="hidden-sm-down">{{item.name}}</span> </a>
-                                       <div class="collapse p-3" id="menu{{item.id}}">
+                                       <div class="collapse " id="menu{{item.id}}" style="margin-left:33px">
                                           {%  for items in item.cats %}
-                                            <a href="#menu1sub{{items.id}}"  style="background-color:pink" data-toggle="collapse" aria-expanded="false"> {{ items.name}}</a>
-                                                      <div class="collapse" id="menu1sub{{items.id}}">
+                                            <a href="#menu1sub{{items.id}}" data-toggle="collapse" aria-expanded="false"> {{ items.name}}</a>
+                                                      <div class="collapse" id="menu1sub{{items.id}}" style="margin-left:33px">
                                                            {%  for item_new in items.category.all %}
-                                                                    <a href="{%url 'model'%}?model={{ item_new.name }}"class="list-group-item" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
+                                                                    <a href="{%url 'model'%}?model={{ item_new.name }}" data-parent="#menu1sub1{{items.id}}">{{ item_new.name}}</a>
                                                            {%endfor%}
                                                   <!-- <div class="collapse"> -->
                                             </div>
@@ -533,15 +486,6 @@
                   <div class=" span5" data-wow-duration="1.4s">
 
                       <div id="table-scroll">
-
-
-                                <!-- <th>Name</th>
-                                <th>Value</th> -->
-               <!-- <form  action = '/get_response/'id='d' method="POST">
-
-                    {{model.inputs_csv | safe}}
-                      <input type="submit" value="OK">
-                  </form> -->
                   <table class="fixed" id ="table_data">
                     <thead>
                                 <th>Name</th>
@@ -569,51 +513,39 @@
                     </div>
               </div>
                </div>
-                  <!-- <div class="span2">
-                     <label class="custom-upload">
-                     <span class="fa fa-database"></span>
-                      Load Data here
-                       <input type ="button" class="btn btn-color btn-rounded  btn-sm" id ="loadData" class="form-control">
-                    </label>
-                 </div> -->
                </div>
            </div>
          </div>
          <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
            <!-- <h5>Result </h5>  <strong><h3 id='result' style='color:black;'></h3></strong> -->
 
-              <h5>Result </h5>
 
-            <strong>    <h3 id='result' style='color:black;'></h3></strong>
+
+              <div class="cta-box">
+                 <div class="cta form-group">
+                   <div class="span2">
+
+
+                        <h5 style="height : 60px">Result </h5>
+
+
+                    </div>
+                      <div class=" span5" data-wow-duration="1.4s">
+                       <div id="table-scroll">
+                         <table id="cupFinals" border=1 px class="fixed">
+                                   <tbody id="matchData"></tbody>
+                            </table>
+
+
+                      </div>
+                </div>
+                 </div>
+                 </div>
+             </div>
+
 
 
          </div>
-          <!-- <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-
-              <div id="table-scroll">
-
-                      <table class="fixed" id ="table_data">
-                      {% for i in model.inputs_csv %}
-                         {% if forloop.counter == 1 %}
-                            <th>{{ i.0 }}</th>
-                            <th>{{ i.1 }}</th>
-
-                               {% else %}
-                                 <tr>
-
-                                    <td>
-                                      {{i.0}}</td>
-                                    <td>{{ i.1 }}</td>
-
-                                 </tr>
-                       {% endif %}
-                      {% endfor %}
-
-                      </table>
-
-            </div>
-
-       </div> -->
      </div>
 
   <div class="row">
