--- a/templates/services.html
+++ b/templates/services.html
@@ -19,7 +19,7 @@
 
     <!-- Bootstrap CSS File -->
         <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/service_updated07.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/service_updated11.css' %}">
     <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -252,6 +252,18 @@ function likebutton() {
 </div>
 
   </header>
+  <div class="overlay d-flex align-items-center" style="background: url('{{ moduleimage.url }}') no-repeat; background-size: cover;">
+  <section id="intro" class="clearfix" >
+    <div class="container">
+
+      <div class="intro-info">
+      <h1 class="caption">Fortifying your business with blockchain solutions</h1>
+
+      </div>
+   </div>
+
+  </section>
+</div>
 
 
 
@@ -266,7 +278,7 @@ function likebutton() {
 
               <!-- <div class="line"></div> -->
                <div class="row">
-                <div class="breadcrumb">
+                <div>
                  <ul class="nav nav-tab nav-justified md-tabs indigo" id="myTabJust" style="width:100%" role="tablist">
                     {%for item in catList %}
                    <li
@@ -338,88 +350,13 @@ function likebutton() {
     {%endfor%}
 
 
-  <!-- <div class="tab-pane fade" id="kl2" role="tabpanel" aria-labelledby="profile-tab-just">
-    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1
-      labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft
-      beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad
-      vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar
-      helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes
-      anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party
-      scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
-  </div>
-  <div class="tab-pane fade" id="contact-just" role="tabpanel" aria-labelledby="contact-tab-just">
-    <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro
-      fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone
-      skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings
-      gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork
-      biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl
-      craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
-  </div> -->
+
 </div>
 
 
-                        <!-- <ul class="nav nav-pills  md-pills nav-justified pills-warning mb-4">
 
-                          {% for item in catList %}
-                          <li class="nav-item">
-                            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
-                              aria-controls="pills-profile" aria-selected="false">{{item.name}}</a>
-                          </li>
-
-                       {% endfor %}
-
-                  </ul>
-
-
-                  <div class="tab-content pt-2 pl-1" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">Consequat
-                      occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat
-                      velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo
-                      anim ex veniam culpa eiusmod id nostrud sit cupidatat in veniam ad. Eiusmod consequat eu adipisicing
-                      minim anim aliquip cupidatat culpa excepteur quis. Occaecat sit eu exercitation irure Lorem incididunt
-                      nostrud.</div>
-
-
-                </div> -->
-                <!-- Grid column -->
 
               </div>
-              <!-- Grid row -->
-
-
-
-<!--
-              <div class="row">
-
-                  {% if models %}
-                     {%  for item in models %}
-
-                     <div class="col-md-6 col-lg-4 mb-4 wow bounceInUp" data-wow-duration="1.4s">
-                      <div class="card h-85 mb-3">
-                           <img class="card-img-top img-fluid card-style" src="{{ item.image.url }}" alt="">
-                           <div class="card-body">
-
-                               <h4 class="title"><a href="{%url 'model'%}?model={{ item.name }}">{{item.name}}</a></h4>
-                               <p class="description comment more">{{item.summary}}</p>
-
-                           </div>
-                           <div class="card-footer">
-                             <small class="text-muted">
-                                Updated on <cite title="Source Title">{{item.time}}</cite>
-                             </small>
-
-                          </div>
-                       </div>
-                     </div>
-                 {% endfor %}
-                     {% else %}
-                     <div class="col-md-12">
-                         <p>No Models</p>
-
-                     </div>
-                       {% endif %}
-
-          </div> -->
 
 
             </div>
